--- a/contenedorprincipal.css
+++ b/contenedorprincipal.css
@@ -62,7 +62,7 @@ main section p{
   margin-bottom: 16px;
 }
 main h1{
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   color: #3962d1;
 }
 
@@ -70,7 +70,8 @@ aside{
   width: 30%;
   float: left;
   background-color:#fdfdfd;
-  padding: 30px;
+  padding: 1px;
+  font-size: small;
 }
 aside ul li{
   text-decoration: none;
@@ -81,7 +82,7 @@ aside ul li:hover{
 }
 aside ul li{
   list-style: none;
-  margin-bottom: 16px;
+  margin-bottom: 30px;
   border-bottom: 1px solid rgb(55, 0, 255);
 }
 aside h4{
@@ -136,3 +137,24 @@ ul.menured div a:hover {color: grey;}
 ul.menured li:hover {width:240px;}
 ul.menured li:hover a[class^=red] {-moz-transform: rotate(720deg); -webkit-transform: rotate(720deg); transform: rotate(720deg);}
 </style>
+
+nav a{
+  background-color: skyblue;
+  color: rgb(50, 9, 231);
+  border: none;
+  cursor: pointer;
+  padding:20px;
+  margin-top:20px;
+  }
+        
+nav li{
+  display:inline-block;
+  width:150px;
+  height:50px;
+  padding:5px 10px;
+  background-color:#000;
+  border:1px solid #000;
+  text-align:center;
+  color:rgb(36, 30, 92);
+  position:relative;
+}
